# project_computer_interfacing

./: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.cpp  cmake_install.cmake  serial  server  server.cpp  test_serial.cpp
